<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0f0040"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="404dp"
        android:layout_height="500dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/celeb"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/button1"
        android:layout_width="155dp"
        android:layout_height="141dp"
        android:background="@drawable/btn_bg"
        android:gravity="center"
        android:text="@string/turtle"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:tag="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.701" />

    <Button
        android:id="@+id/button4"
        android:layout_width="155dp"
        android:layout_height="141dp"
        android:background="@drawable/btn_bg"
        android:gravity="center"
        android:text="@string/leopard"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:tag="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.936"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.972" />

    <Button
        android:id="@+id/button3"
        android:layout_width="155dp"
        android:layout_height="141dp"
        android:background="@drawable/btn_bg"
        android:gravity="center"
        android:text="@string/rabbit"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:tag="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.972" />

    <Button
        android:id="@+id/button2"
        android:layout_width="155dp"
        android:layout_height="141dp"
        android:background="@drawable/btn_bg"
        android:gravity="center"
        android:tag="2"
        android:text="@string/cheetah"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.936"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.701" />


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="174dp"
        android:layout_height="170dp"
        android:background="@drawable/circle_shape"
        android:indeterminate="false"
        android:max="100"
        android:progress="0"
        android:progressDrawable="@drawable/circular_progress_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.413"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/Question"
        android:layout_width="362dp"
        android:layout_height="143dp"
        android:gravity="center"
        android:text="@string/what_is_the_fastest_animal_in_the_world"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.143" />

    <TextView
        android:id="@+id/Quiz"
        android:layout_width="229dp"
        android:layout_height="59dp"
        android:background="@drawable/gradient_bg"
        android:gravity="center"
        android:text="@string/sunday_quiz"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037" />

    <TextView
        android:id="@+id/Timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0_05"
        android:textColor="#ffffff"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="@+id/progressBar"
        app:layout_constraintStart_toStartOf="@+id/progressBar"
        app:layout_constraintTop_toTopOf="@+id/progressBar" />

    <TextView
        android:id="@+id/FinalAns"
        android:layout_width="350dp"
        android:layout_height="131dp"
        android:gravity="center"
        android:text="@string/your_final_score_is"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.688"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.405" />

    <Button
        android:id="@+id/playAgain"
        android:layout_width="136dp"
        android:layout_height="82dp"
        android:background="@drawable/play_again_btn"
        android:text="@string/play_again"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.708" />


</androidx.constraintlayout.widget.ConstraintLayout>